--- a/public/css/style.css
+++ b/public/css/style.css
@@ -194,56 +194,6 @@ table th
     right;
 }
 
-.button-combat-style-thin
-{
-    font-family: 'runescape', sans-serif;
-    font-size: 1.5em;
-    font-weight: bold;
-    line-height: 4rem;
-
-    transition: all .2s ease-in;
-
-    color: #cbcbcb;
-    background: url('/resource-packs/pack-osrs-dark/button/combat_style_thin.png') no-repeat;
-    background-position: center center;
-    background-size: contain !important;
-
-    image-rendering: pixelated;
-}
-
-.button-combat-style-thin:hover
-{
-    transition: all .2s ease-in;
-
-    background: url('/resource-packs/pack-osrs-dark/button/combat_style_thin_selected.png') no-repeat;
-    background-position: center center;
-}
-
-.button-combat-style-narrow
-{
-    font-family: 'runescape', sans-serif;
-    font-size: 1.5em;
-    font-weight: bold;
-    line-height: 4rem;
-
-    transition: all .2s ease-in;
-
-    color: #cbcbcb;
-    background: url('/resource-packs/pack-osrs-dark/button/combat_style_narrow.png') no-repeat;
-    background-position: center center;
-    background-size: contain !important;
-
-    image-rendering: pixelated;
-}
-
-.button-combat-style-narrow:hover
-{
-    transition: all .2s ease-in;
-
-    background: url('/resource-packs/pack-osrs-dark/button/combat_style_narrow_selected.png') no-repeat;
-    background-position: center center;
-}
-
 .background-dialog-panel
 {
     background: url('/resource-packs/pack-osrs-dark/dialog/bottom_line_mode_side_panel_corner_top_left.png') no-repeat, /* top left */
@@ -286,46 +236,6 @@ table th
     right,
     bottom -15px left,
     center;
-}
-
-.button-enter-wilderness-teleport
-{
-    font-family: 'runescape', sans-serif;
-    font-size: 1.5em;
-    font-weight: bold;
-    line-height: 4rem;
-
-    transition: all .2s ease-in;
-
-    color: #cbcbcb;
-    background: url('/resource-packs/pack-osrs-dark/button/enter_wilderness_teleport.png') no-repeat;
-    background-position: center center;
-    background-size: contain !important;
-
-    image-rendering: pixelated;
-}
-
-.button-enter-wilderness-teleport:hover
-{
-    transition: all .2s ease-in;
-
-    background: url('/resource-packs/pack-osrs-dark/button/enter_wilderness_teleport_hovered.png') no-repeat;
-    background-position: center center;
-}
-
-.button-window-close
-{
-    background: url('/resource-packs/pack-osrs-dark/button/bottom_line_mode_window_close.png') no-repeat;
-    background-position: center center;
-    background-size: contain !important;
-
-    image-rendering: pixelated;
-}
-
-.button-window-close:hover
-{
-    background: url('/resource-packs/pack-osrs-dark/button/bottom_line_mode_window_close_hovered.png') no-repeat;
-    background-position: center center;
 }
 
 .background-world-map
@@ -383,12 +293,6 @@ table th
     center;
 }
 
-.button-static
-{
-    width: 12rem;
-    height: 5rem;
-}
-
 .collection-log-item
 {
     position: relative;
@@ -419,14 +323,16 @@ table th
     opacity: .25;
 }
 
-.button-with-icon {
-    width: 12.5rem;
-    height: 5rem;
+.icon {
+    width: 72px;
+    height: 64px;
+    object-fit: contain;
 }
 
-.icon {
-    width: 3.25rem;
-    height: 3rem;
+.notification-icon {
+    width: 60px;
+    height: 60px;
+    object-fit: contain;
     border-right: solid 2px;
 }
 
