--- a/public/css/style.css
+++ b/public/css/style.css
@@ -325,6 +325,12 @@ table th
     object-fit: contain;
 }
 
+.icon-small {
+    width: 36px;
+    height: 32px;
+    object-fit: contain;
+}
+
 .notification-icon {
     width: 60px;
     height: 60px;
@@ -334,6 +340,12 @@ table th
 .hiscore-icon {
     width: 40px;
     height: 40px;
+    object-fit: contain;
+}
+
+.hiscore-icon-small {
+    width: 25px;
+    height: 25px;
     object-fit: contain;
 }
 
