--- a/public/css/style.css
+++ b/public/css/style.css
@@ -342,7 +342,7 @@ table th
     object-fit: contain;
 }
 
-.notification-icon {
+.broadcast-icon {
     width: 60px;
     height: 60px;
     object-fit: contain;
