Admin Settings page initial #48 #49
- Settings resources
- Settings Helper class

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -173,6 +173,8 @@ a.article:hover {
     position: absolute;
     top: 0;
     right: 0;
+    background: #34424D;
+    color: white;
 }
 
 #content.active {
