--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,8 +1,44 @@
+@mixin font($font-family, $font-file) {
+  @font-face {
+    font-family: $font-family;
+    src: url($font-file+'.eot');
+    src: url($font-file+'.eot?#iefix') format('embedded-opentype'),
+         url($font-file+'.woff') format('woff'),
+         url($font-file+'.ttf') format('truetype'),
+         url($font-file+'.svg#'+$font-family) format('svg');
+    font-weight: normal;
+    font-style: normal;
+  }
+}
+
 // Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+@include font('runescape', '/css/fonts/runescape/runescape');
+@include font('runescape-large', '/css/fonts/runescape-large/runescape-large');
 
 // Variables
 @import 'variables';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+.alert-danger {
+    animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+    transform: translate3d(0, 0, 0);
+    backface-visibility: hidden;
+    perspective: 1000px;
+}
+
+@keyframes shake {
+    10%, 90% {
+        transform: translate3d(-1px, 0, 0);
+    }
+    20%, 80% {
+        transform: translate3d(2px, 0, 0);
+    }
+    30%, 50%, 70% {
+        transform: translate3d(-4px, 0, 0);
+    }
+    40%, 60% {
+        transform: translate3d(4px, 0, 0);
+    }
+}
