--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -17,3 +17,13 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+
+// Admin
+$admin-primary: #34424D;
+$admin-secondary: #47535F;
+$admin-success: #198754;
+$admin-info: #6d7fcc;
+$admin-warning: #ffc107;
+$admin-danger: #dc3545;
+$admin-light: #f8f9fa;
+$admin-dark: #212529;
